--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,18 +1,26 @@
 html {
   font-size: 14px;
+
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+        color: #ffffff
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    color: #ffffff
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #1d1d1d;
+}
+
+input {
+    background-color: #3d3d3d
 }
