--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <h1>Neureveal's Newspaper</h1>
 <div id="content">
 
-<img src="~/images/m.jpeg"/>
+<img src="~/images/mm.jpeg"/>
 
 </div>
 <div class="row">
@@ -21,7 +21,7 @@
               
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <input asp-for="Input.Email" class="form-control bg-secondary text-white" autocomplete="username" aria-required="true" />
                     <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" ></span>
                     <span asp-validation-for="Input.Email" ></span>
