--- a/Views/Article/Edit.cshtml
+++ b/Views/Article/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    string role = @ViewBag.Role;
 }
 
 <h1>Edit</h1>
@@ -33,11 +34,14 @@
                 <input asp-for="content" class="form-control" />
                 <span asp-validation-for="content" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            if(role=="1"){
+              <div class="form-group">
                 <label asp-for="writer_id" class="control-label"></label>
                 <input asp-for="writer_id" class="form-control" />
                 <span asp-validation-for="writer_id" class="text-danger"></span>
             </div>
+            }
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
