--- a/Views/Article/Index.cshtml
+++ b/Views/Article/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    
 }
 
 <h1>Index</h1>
@@ -38,7 +39,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => 
-                    item.article_date.Date
+                    item.article_date
                 )
             </td>
             <td>
