--- a/Views/Article/Index.cshtml
+++ b/Views/Article/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.content)
+                 <a asp-action="Details" asp-route-id="@item.id">@Html.DisplayFor(modelItem => item.content)</a> 
             </td>
             <td>
               
@@ -54,7 +54,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
+
                 <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
