--- a/Views/Article/Index.cshtml
+++ b/Views/Article/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"  class="btn btn-outline-info ">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -22,9 +22,7 @@
             <th>
                 Title
             </th>
-            <th>
-               Content
-            </th>
+
             <th>
                Writer ID
             </th>
@@ -43,19 +41,17 @@
                 )
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.title)
+                <a asp-action="Details" asp-route-id="@item.id">@Html.DisplayFor(modelItem => item.title)</a> 
             </td>
-            <td>
-                 <a asp-action="Details" asp-route-id="@item.id">@Html.DisplayFor(modelItem => item.content)</a> 
-            </td>
+
             <td>
               
                 @Html.DisplayFor(modelItem => item.writer_id)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.id"  class="btn btn-secondary ">Edit</a> |
 
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.id"  class="btn btn-secondary">Delete</a>
             </td>
         </tr>
 }
