--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-info ">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.category_name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.category_name">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.category_name">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.category_name">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.category_name" class="btn btn-secondary ">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.category_name" class="btn btn-secondary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.category_name"class="btn btn-secondary ">Delete</a>
             </td>
         </tr>
 }
