--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -30,6 +30,6 @@ table {
     box-shadow: 5px 10px 8px #888888;
 }
 
-button{
+button, .gradientBtn{
     background-image: linear-gradient(to right, #ff824a, #ffb238);
 }
